gui_files = files(
	'Button.cpp',
	'ButtonMenu.cpp',
	'CheckBox.cpp',
	'Component.cpp',
	'DropDown.cpp',
	'ImageButton.cpp',
	'Label.cpp',
	'LinearDelayAnimation.cpp',
	'ModalWindow.cpp',
	'MomentumAnimation.cpp',
	'PopupWindow.cpp',
	'ScrollPanel.cpp',
	'SDLWindow.cpp',
	'Separator.cpp',
	'Static.cpp',
	'Style.cpp',
	'TextBox.cpp',
	'TextWrapper.cpp',
)

subdir('colourpicker')
subdir('console')
subdir('dialogues')
subdir('elementsearch')
subdir('filebrowser')
subdir('font')
subdir('game')
subdir('interface')
subdir('localbrowser')
subdir('login')
subdir('options')
subdir('preview')
subdir('profile')
subdir('render')
subdir('save')
subdir('search')
subdir('tags')
subdir('update')

powder_files += gui_files
font_files += gui_files
