powder_src += files(
	'AddLife.cpp',
	'Avatar.cpp',
	'Browser.cpp',
	'ColorPicker.cpp',
	'ConfirmQuit.cpp',
	'Console.cpp',
	'ElementSearch.cpp',
	'Game.cpp',
	'GameAction.cpp',
	'GameBrush.cpp',
	'GameGui.cpp',
	'GameHistory.cpp',
	'GameHud.cpp',
	'GameTool.cpp',
	'LocalBrowser.cpp',
	'LocalSaver.cpp',
	'Login.cpp',
	'OnlineBrowser.cpp',
	'OnlineSaver.cpp',
	'Preview.cpp',
	'Profile.cpp',
	'Property.cpp',
	'SaveButton.cpp',
	'Saver.cpp',
	'Settings.cpp',
	'Sign.cpp',
	'StampBrowser.cpp',
	'Tags.cpp',
	'Update.cpp',
)
