powder_src += files(
	'CommonMetrics.cpp',
	'Host.cpp',
	'InputMapper.cpp',
	'MomentumAnimation.cpp',
	'SdlAssert.cpp',
	'Stack.cpp',
	'StaticTexture.cpp',
	'TargetAnimation.cpp',
	'TextWrapper.cpp',
	'View.cpp',
	'ViewButton.cpp',
	'ViewCheckbox.cpp',
	'ViewComponent.cpp',
	'ViewContextmenu.cpp',
	'ViewDialog.cpp',
	'ViewDragger.cpp',
	'ViewDropdown.cpp',
	'ViewLayout.cpp',
	'ViewMisc.cpp',
	'ViewModal.cpp',
	'ViewPanel.cpp',
	'ViewPopup.cpp',
	'ViewProgressbar.cpp',
	'ViewProperties.cpp',
	'ViewScrollpanel.cpp',
	'ViewSlider.cpp',
	'ViewText.cpp',
	'ViewTextbox.cpp',
	'WindowParameters.cpp',
)
