powder_src += files(
	'Host.cpp',
	'InputMapper.cpp',
	'MomentumAnimation.cpp',
	'SdlAssert.cpp',
	'Stack.cpp',
	'StaticTexture.cpp',
	'TargetAnimation.cpp',
	'TextWrapper.cpp',
	'View.cpp',
	'ViewButton.cpp',
	'ViewCheckbox.cpp',
	'ViewComponent.cpp',
	'ViewDialog.cpp',
	'ViewDropdown.cpp',
	'ViewLayout.cpp',
	'ViewModal.cpp',
	'ViewPanel.cpp',
	'ViewProperties.cpp',
	'ViewScrollpanel.cpp',
	'ViewSeparator.cpp',
	'ViewText.cpp',
	'ViewTextbox.cpp',
	'WindowParameters.cpp',
)
